--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,6 @@ main = "./src/server.js"
 compatibility_date="2023-05-18"
 
 # [secrets]
-DISCORD_TOKEN
-DISCORD_PUBLIC_KEY
-DISCORD_APPLICATION_ID
+# DISCORD_TOKEN
+# DISCORD_PUBLIC_KEY
+# DISCORD_APPLICATION_ID
